feat: update api-client
